--- a/src/routes/account/preferences/preferences.scss
+++ b/src/routes/account/preferences/preferences.scss
@@ -5,10 +5,6 @@
     flex: 1 1 auto;
 }
 
-.setting {
-    width: 100%;
-}
-
 .section-title {
     margin-top: 16px;
 }
